fix h2 spacing

--- a/css/inner/edit-project-settings.less
+++ b/css/inner/edit-project-settings.less
@@ -33,10 +33,10 @@ form.expando {
     font-size: 2em;
     display: block;
     width: 100%;
-    padding: 0;
     margin: 0;
-    line-height: 2em;
     border: none;
+    line-height: 1.25em;
+    padding: .25em 0;
   }
   h4 {
     font-family: @sansFontFamily;
